<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fundamentals of Computing</string>
    <string name="component_name_convert">Converter</string>
    <string name="component_name_sort">Sorting Algorithms</string>
    <string name="component_name_search">Search Algorithms</string>
    <string name="component_name_gates">Logic Gates</string>
    <string name="component_name_explain">Explain</string>
    <string name="component_name_help">Help</string>  
    <string name="quit">Exit</string>
    <string name="really_quit">Are you sure you want to quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="numbersystem_prompt">Select Number System</string>
    <string name="sort_prompt">Select Sort Type</string>
    <string name="search_prompt">Select Search Type</string>
    <string name="converter_marquee">Binary | Quaternary | Octal | Decimal | Hexadecimal</string>
    <string name="sorter_marquee">Bubble Sort | Insertion Sort | Heap Sort | Merge Sort | Selection Sort | Quick Sort | Bidirectional Bubble Sort</string>
    <string name="searcher_marquee">Binary Search | Sequential Search | Hash-based Search | Binary Tree Search</string>
    <string name="gates_marquee">OR | AND | NOR | NAND | XOR</string>
    <string name="home_label">Home</string>
    <string name="explain_label">Explain</string>
    <string name="animate_label">Animate</string>    
    <string name="converter_label">Converter</string>
    <string name="sort_input_label">Generate Numbers to Sort</string>
    <string name="search_input_label">Enter number to search</string>    
    <string name="sort_label">Sort</string>
    <string name="sort_output_label">Sort numbers</string>
    <string name="search_output_label">Contains</string>    
    <string name="timetaken_label">Time taken</string>
    <string name="search_label">Search</string>
    <string name="generate_label">Regenerate</string>    
    <string name="gates_label">Logic Gates</string>
    <string name="binary_label">Binary</string>
    <string name="quaternary_label">Quaternary</string>
    <string name="octal_label">Octal</string>
    <string name="decimal_label">Decimal</string>
    <string name="hexadecimal_label">Hexadecimal</string>
    
    <string name="conversion_help_knowmore_label">"Press the number system label to know more"</string>
    <string name="conversion_help_viewconversion_label">"Press the value to view the conversion"</string>
    
    <string name="e_label">e</string>
    
    <string name="complexity_label">Complexity</string>
    <string name="complexity_label_Best">Best</string>
    <string name="complexity_label_Avg">Average</string>
    <string name="complexity_label_Worst">Worst</string>
    
    
    <string name= "helphometext">Home</string>
    <string name= "helpconvertertext">Number System Converter</string>
    <string name= "helpsortertext">Sorting Algorithms/ Sort given numbers</string>
    <string name= "helpsearchertext">Search Algorithms/ Search given element</string>
    <string name= "helpquittext">Quit</string>
    <string name= "helphelptext">Help</string>
    <string name= "helpexplaintext">Explain or Know more</string>
    <string name= "helpgeneratetext">Generate new set of numbers</string>
    <string name= "helpanimatetext">View Animation</string>
    

    <string-array name="numbersystem_array">
        <item>Binary</item>
        <item>Quaternary</item>
        <item>Octal</item>
        <item>Decimal</item>
        <item>Hexadecimal</item>
    </string-array>
    <string-array name="sort_array">
        <item>Bubble Sort</item>
        <item>Insertion Sort</item>
        <item>Heap Sort</item>
        <item>Merge Sort</item>
        <item>Selection Sort</item>
        <item>Quick Sort</item>
        <item>Bidirectional Bubble Sort</item>
    </string-array>
    <string-array name="search_array">
        <item>Binary Search</item>
        <item>Sequential Search</item>
    </string-array>
</resources>