<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        android:orientation="vertical">

<LinearLayout android:id="@+id/toolbar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" >
	<Button  android:id="@+id/home" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="20dp" android:background="@drawable/home"/>
    <Button android:id="@+id/converter" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="20dp" android:background="@drawable/system_binary"/>
    <Button android:id="@+id/sorter" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="20dp" android:background="@drawable/sort"/>
    <Button android:id="@+id/searcher" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="20dp" android:background="@drawable/search" android:enabled="false" />
    <Button android:id="@+id/gates" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="20dp" android:background="@drawable/pcb"/>        
    <Button android:id="@+id/quit" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="20dp" android:background="@drawable/quit"/>
    <Button android:id="@+id/help" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="20dp" android:background="@drawable/question"/>        
</LinearLayout>

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >




        <TableRow android:id="@+id/tableRow1"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/aboutSearchType"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" />

        <Button android:id="@+id/explainButton"  android:layout_width="wrap_content"  android:layout_height="wrap_content"  android:layout_marginTop="2dp"  android:text="@string/explain_label" />            
        </TableRow>

        <TableRow android:id="@+id/tableRow2"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/inputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_input_label" >
            </TextView>        
        </TableRow>

        <TableRow android:id="@+id/tableRow3"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/searchInputValues"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="number" 
                >
            </TextView>
                         <Button
                android:id="@+id/generateSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/generate_label" />
        </TableRow>
        <TableRow android:id="@+id/tableRow3a"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/searchInputElement"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="number" >
            </EditText> 
                       
            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/search_label" />
        </TableRow>
        
        <TableRow android:id="@+id/tableRow4"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/outputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/search_output_label" >
            </TextView> 
                                   <TextView
                android:id="@+id/searchOutputValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">
            </TextView>
        <Button android:id="@+id/animateButton"  android:layout_width="wrap_content"  android:layout_height="wrap_content"  android:layout_marginTop="2dp"  android:text="@string/animate_label" />            
        </TableRow>
        <TableRow android:id="@+id/tableRow5"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/timetakenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/timetaken_label" >
            </TextView>  
            <TextView
                android:id="@+id/timetaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp" >
            </TextView>                                             
                                   </TableRow> 
                                   
        <TableRow android:id="@+id/tableRow6"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/complexityLabel"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/complexity_label"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow7"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/complexityLabelBest"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/complexity_label_Best"/>
        <TextView android:id="@+id/complexityLabelBestValue"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow8"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/complexityLabelAverage"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/complexity_label_Avg"/>
        <TextView android:id="@+id/complexityLabelAverageValue"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow9"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/complexityLabelWorst"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/complexity_label_Worst"/>                            
        <TextView android:id="@+id/complexityLabelWorstValue"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp"/>                            
        </TableRow>                                                         

</LinearLayout>
</LinearLayout>