<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">

<include layout="@layout/menu" android:id="@+id/menus"/>

<RelativeLayout android:id="@+id/body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
    <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/numbersystem_prompt"  style="@color/black_color"
            
            />
    <EditText android:id="@+id/converterInputValue" android:layout_height="wrap_content" android:layout_width="200dp"  android:layout_toRightOf="@id/spinner" android:inputType="number" />    
    
    <Button android:id="@+id/base2" android:layout_width="wrap_content"  android:layout_height="20dp"  android:layout_below="@+id/spinner"  android:layout_marginTop="2dp" android:paddingLeft="5dp" android:text="@string/binary_label" style="@style/CustomTheme2" android:background="@color/black_color" />
    <Button android:id="@+id/base4" android:layout_width="wrap_content"  android:layout_height="20dp"  android:layout_below="@+id/base2"  android:layout_marginTop="2dp" android:paddingLeft="5dp"  android:text="@string/quaternary_label" style="@style/CustomTheme2" android:background="@color/black_color"/>
    <Button android:id="@+id/base8" android:layout_width="wrap_content"  android:layout_height="20dp"  android:layout_below="@+id/base4"  android:layout_marginTop="2dp" android:paddingLeft="5dp"  android:text="@string/octal_label"  style="@style/CustomTheme2" android:background="@color/black_color"/>
    <Button android:id="@+id/base10" android:layout_width="wrap_content"  android:layout_height="20dp"  android:layout_below="@+id/base8"  android:layout_marginTop="2dp" android:paddingLeft="5dp"  android:text="@string/decimal_label"  style="@style/CustomTheme2" android:background="@color/black_color"/>
    <Button android:id="@+id/base16" android:layout_width="wrap_content"  android:layout_height="20dp" android:layout_below="@+id/base10"  android:layout_marginTop="2dp" android:paddingLeft="5dp"  android:text="@string/hexadecimal_label" style="@style/CustomTheme2" android:background="@color/black_color"/>
    
    <Button android:id="@+id/base2value" android:layout_width="wrap_content"  android:layout_height="wrap_content"  android:layout_below="@+id/converterInputValue" android:layout_marginTop="2dp" android:layout_marginLeft="80dp" android:layout_marginRight="10dp" android:layout_alignParentRight="true"  android:paddingRight="10dp" style="@style/CustomTheme2" android:background="@color/black_color"/>
    <Button android:id="@+id/base4value" android:layout_width="wrap_content"  android:layout_height="wrap_content"  android:layout_below="@+id/base2value" android:layout_marginTop="2dp" android:layout_marginLeft="80dp" android:layout_marginRight="10dp" android:layout_alignParentRight="true"  android:paddingRight="10dp"  style="@style/CustomTheme2" android:background="@color/black_color"/>
    <Button android:id="@+id/base8value" android:layout_width="wrap_content"  android:layout_height="wrap_content"  android:layout_below="@+id/base4value" android:layout_marginTop="2dp" android:layout_marginLeft="80dp" android:layout_marginRight="10dp" android:layout_alignParentRight="true"  android:paddingRight="10dp"  style="@style/CustomTheme2" android:background="@color/black_color"/>
    <Button android:id="@+id/base10value" android:layout_width="wrap_content"  android:layout_height="wrap_content" android:layout_below="@+id/base8value" android:layout_marginTop="2dp" android:layout_marginLeft="80dp" android:layout_marginRight="10dp" android:layout_alignParentRight="true"  android:paddingRight="10dp"  style="@style/CustomTheme2" android:background="@color/black_color"/>
    <Button android:id="@+id/base16value" android:layout_width="wrap_content"  android:layout_height="wrap_content" android:layout_below="@+id/base10value" android:layout_marginTop="2dp" android:layout_marginLeft="80dp" android:layout_marginRight="10dp" android:layout_alignParentRight="true"  android:paddingRight="10dp"  style="@style/CustomTheme2" android:background="@color/black_color"/>
    
    <TextView android:id="@+id/explainNumberSystem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/base16" android:layout_marginTop="20dp" android:textSize="10dp" android:paddingRight="10dp" android:paddingLeft="10dp"/>
    
    <TextView android:id="@+id/explainHelp" android:layout_width="wrap_content" android:layout_height="20dp" android:text="Click on the number system label to know more" android:layout_below="@+id/explainNumberSystem" android:layout_marginTop="30dp"/>
    
    <TextView android:id="@+id/animateHelp" android:layout_width="wrap_content" android:layout_height="20dp" android:text="Click on the value to see the conversion" android:layout_below="@+id/explainHelp" android:layout_marginTop="2dp"/>
    
</RelativeLayout>

</LinearLayout>