<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
<include layout="@layout/menu"  android:id="@+id/menus"/>
<TabHost
    android:id="@android:id/tabhost"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
        <TextView android:id="@+id/describeSearchType"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:textSize="10dp"/>
        <Button android:id="@+id/explainButton"  android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                 android:background="@drawable/help" />

        </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >
        <TableRow android:id="@+id/tableRow2"  android:layout_width="wrap_content"  android:layout_height="wrap_content"  android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/inputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_input_label" >
            </TextView>
        </TableRow>

        <TableRow android:id="@+id/tableRow3"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/searchInputValues"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="number"
                >
            </TextView>
                         <Button
                android:id="@+id/generateSearchButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                 android:background="@drawable/refresh"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow3a"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/searchInputElement"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="number" >
            </EditText> 
                       
            <Button
                android:id="@+id/searchButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                 android:background="@drawable/search" />
        </TableRow>
        
        <TableRow android:id="@+id/tableRow4"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >


        <Button android:id="@+id/animateButton"  android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                 android:background="@drawable/animate" />            
        </TableRow>
        <TableRow android:id="@+id/tableRow5"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/timetakenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/timetaken_label" >
            </TextView>  
            <TextView
                android:id="@+id/timetaken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp" >
            </TextView>                                             
                                   </TableRow> 
        </LinearLayout>
        <include layout="@layout/spacer" />
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
     >
        
        <TableRow android:id="@+id/tableRow6"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/complexityLabel"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/complexity_label"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow7"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/complexityLabelBest"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/complexity_label_Best"/>
        <TextView android:id="@+id/complexityLabelBestValue"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow8"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/complexityLabelAverage"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/complexity_label_Avg"/>
        <TextView android:id="@+id/complexityLabelAverageValue"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow9"  android:layout_width="wrap_content"  android:layout_height="wrap_content" >
        <TextView android:id="@+id/complexityLabelWorst"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/complexity_label_Worst"/>                            
        <TextView android:id="@+id/complexityLabelWorstValue"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp"/>                            
        </TableRow>                                                         

</LinearLayout>            
            
            

    </LinearLayout>
</TabHost>
    </LinearLayout>